# libStructedLightCamera

./: .gitignore  CMakeLists.txt  Example.cpp  README.md  StructedLightCamera.cpp  StructedLightCamera.h  StructedLightCameraConfig.cmake
cmake/: StructedLightCamera.pc  StructedLightCameraConfig.cmake
doc/: Doxyfile
include/: StructedLightCamera.h  structedLightCamera.h
include/CameraControl/: CameraControl.h
include/CameraControl/CameraUtility/: CammeraUnilty.h
include/CameraControl/ProjectorSDK/: ProjectorControl.h  common.h
include/Restructor/: DividedSpaceTimeMulUsedMaster_GPU.h  FourFloorFouStepMaster_GPU.h  FourStepRefPlainMaster_GPU.h  FourStepSixGrayCodeMaster_CPU.h  FourStepSixGrayCodeMaster_GPU.h  MatrixsInfo.h  NStepNGrayCodeMaster_CPU.h  PhaseSolver.h  Rectifier.h  Rectifier_CPU.h  Rectifier_GPU.h  Restructor.h  Restructor_CPU.h  Restructor_GPU.h  ShiftGrayCodeUnwrapMaster_GPU.h  ThreeStepFiveGrayCodeMaster_CPU.h  WrapCreator.h  WrapCreator_CPU.h  WrapCreator_GPU.h
include/Restructor/cuda/include/: cudaTypeDef.cuh
include/cuda/: cudaTypeDef.cuh
include/device/: cameraControl.h
include/device/camera/: cammeraUnilty.h
include/device/projector/: API.h  common.h  dlpc347x_internal_patterns.h  dlpc34xx.h  dlpc_common.h  projectorControl.h  usb.h
include/phaseSolver/: dividedSpaceTimeMulUsedMaster_GPU.h  fourFloorFouStepMaster_GPU.h  fourStepRefPlainMaster_GPU.h  fourStepSixGrayCodeMaster_CPU.h  fourStepSixGrayCodeMaster_GPU.h  nStepNGrayCodeMaster_CPU.h  phaseSolver.h  shiftGrayCodeUnwrapMaster_GPU.h  threeStepFiveGrayCodeMaster_CPU.h
include/rectifier/: rectifier.h  rectifier_CPU.h  rectifier_GPU.h
include/restructor/: Restructor.h  Restructor_CPU.h  Restructor_GPU.h
include/tool/: matrixsInfo.h  tool.h
include/wrapCreator/: wrapCreator.h  wrapCreator_CPU.h  wrapCreator_GPU.h
src/: StructedLightCamera.cpp  structedLightCamera.cc  test.cc
src/CameraControl/: CameraControl.cpp
src/CameraControl/CameraUtility/: CammeraUnilty.cpp
src/CameraControl/ProjectorSDK/: API.cpp  ProjectorControl.cpp  cypress_i2c.c  dlpc347x_internal_patterns.c  dlpc34xx.c  dlpc_common.c  hid.c  usb.cpp
src/Restructor/: DividedSpaceTimeMulUsedMaster_GPU.cpp  FourFloorFouStepMaster_GPU.cpp  FourStepRefPlainMaster_GPU.cpp  FourStepSixGrayCodeMaster_CPU.cpp  FourStepSixGrayCodeMaster_GPU.cpp  MatrixsInfo.cpp  NStepNGrayCodeMaster_CPU.cpp  PhaseSolver.cpp  Rectifier_CPU.cpp  Rectifier_GPU.cpp  Restructor.cpp  Restructor_CPU.cpp  Restructor_GPU.cpp  ShiftGrayCodeUnwrapMaster_GPU.cpp  ThreeStepFiveGrayCodeMaster_CPU.cpp  WrapCreator_CPU.cpp  WrapCreator_GPU.cpp
src/Restructor/cuda/: depthColorMap.cu  solvephase.cu  wrap.cu
src/cuda/: depthColorMap.cu  solvephase.cu  wrap.cu
src/device/: cameraControl.cc
src/device/camera/: cammeraUnilty.cc
src/device/projector/: API.cc  cypress_i2c.c  dlpc347x_internal_patterns.c  dlpc34xx.c  dlpc34xx_dual.c  dlpc_common.c  hid.c  projectorControl.cc  usb.cc
src/phaseSolver/: dividedSpaceTimeMulUsedMaster_GPU.cc  fourFloorFouStepMaster_GPU.cc  fourStepRefPlainMaster_GPU.cc  fourStepSixGrayCodeMaster_CPU.cc  fourStepSixGrayCodeMaster_GPU.cc  nStepNGrayCodeMaster_CPU.cc  phaseSolver.cc  shiftGrayCodeUnwrapMaster_GPU.cc  threeStepFiveGrayCodeMaster_CPU.cc
src/rectifier/: rectifier_CPU.cc  rectifier_GPU.cc
src/restructor/: restructor.cc  restructor_CPU.cc  restructor_GPU.cc
src/tool/: gpu_tool.cu  matrixsInfo.cc  tool.cc
src/wrapCreator/: wrapCreator_CPU.cc  wrapCreator_GPU.cc
systemFile/calibrationFiles/: SystemCalibration.yml  extrinsic.yml  intrinsic.yml
